# nano-ch32h417

./: README.md
firmware/firm-prj/01_LED/: CMakeLists.txt
firmware/firm-prj/01_LED/ch32h417-v3f/: CMakeLists.txt
firmware/firm-prj/01_LED/ch32h417-v3f/prj/: ch32h417-v3f.code-workspace
firmware/firm-prj/01_LED/ch32h417-v3f/src/ap/: ap.c
firmware/firm-prj/01_LED/ch32h417-v3f/src/bsp/: bsp.c  bsp.h
firmware/firm-prj/01_LED/ch32h417-v3f/src/bsp/device/: core_riscv.c  system_ch32h417.c
firmware/firm-prj/01_LED/ch32h417-v3f/src/hw/: hw.c  hw_def.h
firmware/firm-prj/01_LED/ch32h417-v3f/src/hw/driver/: led.c
firmware/firm-prj/01_LED/ch32h417-v5f/: CMakeLists.txt
firmware/firm-prj/01_LED/ch32h417-v5f/src/ap/: ap.c
firmware/firm-prj/01_LED/ch32h417-v5f/src/bsp/: bsp.c
firmware/firm-prj/01_LED/ch32h417-v5f/src/bsp/device/: ch32h417_it.h  core_riscv.h
firmware/firm-prj/01_LED/ch32h417-v5f/src/bsp/ldscript/: Link_v3f.ld
firmware/firm-prj/01_LED/ch32h417-v5f/src/hw/: hw_def.h
firmware/firm-prj/01_LED/ch32h417-v5f/src/hw/driver/: led.c
firmware/firm-prj/01_LED/prj/vscode/: ch32h417-fw.code-workspace
firmware/firm-prj/01_LED/src/ap/: ap.c
firmware/firm-prj/01_LED/src/bsp/: bsp.c
firmware/firm-prj/01_LED/src/bsp/device/: syscalls.c
firmware/firm-prj/01_LED/src/bsp/ldscript/: Link_v5f.ld
firmware/firm-sdk/common/hw/include/: uart.h
firmware/firm-sdk/common/hw/src/: cli.c
firmware/firm-sdk/hal/inc/: ch32h417.h  ch32h417_dvp.h  ch32h417_eth.h  ch32h417_flash.h  ch32h417_fmc.h  ch32h417_i3c.h  ch32h417_ltdc.h  ch32h417_rcc.h  ch32h417_usart.h  ch32h417_usb.h
firmware/firm-sdk/hal/src/: ch32h417_flash.c  ch32h417_gpio.c  ch32h417_i3c.c  ch32h417_ltdc.c  ch32h417_rcc.c  ch32h417_usart.c
firmware/firm-sdk/tools/: riscv-gcc.cmake
